spacing correction

--- a/projects/Medical-website/scss/main.scss
+++ b/projects/Medical-website/scss/main.scss
@@ -607,9 +607,6 @@ margin-right: 1.5rem;
     .col-12.col-sm-12.col-md.box-shadow.p-0{
        margin: 10px 0px;
     }
-    .text-center{
-        margin: 10px 0px;
-    }
     
     .half-column.bg-white{
         height: 25%;
